tidied up layout css and fixed mobile screen layout issues

--- a/BlazorApp2/Components/Layout/MainLayout.razor.css
+++ b/BlazorApp2/Components/Layout/MainLayout.razor.css
@@ -1,10 +1,10 @@
-.page {
+#page {
     position: relative;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /*background-image: linear-gradient(270deg, #000b84 0%, rgb(0, 0, 0) 20%);*/
-    background-color: #000000;
+    background-image: linear-gradient(270deg, #000b84 0%, rgb(0, 0, 0) 20%);
+    /*background-color: #000000;*/
     /*background-color: antiquewhite;*/
 }
 
@@ -16,77 +16,8 @@ main {
     main > article {
         flex: 1;
         padding: 1rem;
-        padding-top: 0.2rem;
+        padding-top: 0.1rem;
     }
-
-
-/*.app-background {
-    background-image: linear-gradient(180deg, rgb(0, 0, 0) 0%, #9c4b03 99%);
-}*/
-
-/*.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;*/
-    /*height: 3.5rem;*/
-    /*display: flex;
-    align-items: center;
-}*/
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        text-decoration: none;
-    }
-
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
-
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-/*@media (max-width: 640.98px) {
-    .top-row {
-        justify-content: space-between;
-    }
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 0;
-    }
-}*/
-
-@media (min-width: 641px) {
-    ./*page {
-        flex-direction: row;
-    }*/
-
-    /*.sidebar {*/
-        /*width: 250px;*/
-        /*height: 100vh;*/
-        /*position: sticky;
-        top: 0;
-    }*/
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
-
-    /*.top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }*/
-}
 
 #blazor-error-ui {
     background: lightyellow;
