--- a/BlazorApp2/Components/Layout/NavMenu.razor.css
+++ b/BlazorApp2/Components/Layout/NavMenu.razor.css
@@ -1,28 +1,3 @@
-.navbar-toggler {
-    appearance: none;
-    cursor: pointer;
-    width: 3.5rem;
-    height: 2.5rem;
-    color: white;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
-}
-
-    .navbar-toggler:checked {
-        background-color: rgba(255, 255, 255, 0.5);
-    }
-
-.top-row {
-    height: 4.5rem;
-    background-color: rgba(0,0,0,0.4);
-}
-
-.navbar-brand {
-    font-size: 1.4rem;
-}
 
 .bi {
     display: inline-block;
@@ -68,29 +43,7 @@
 
 .nav-item {
     font-size: 1.1rem;
-    /*padding-bottom: 0.5rem;*/
-    /*display: block;*/
 }
-
-    @media (min-width: 768px) {
-        .nav-item {
-            font-size: 1.2rem;
-        }
-    }
-
-    @media (min-width: 992px) {
-        .nav-item {
-            font-size: 1.3rem;
-        }
-    }
-
-    /*.nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }*/
 
     .nav-item ::deep .nav-link {
         color: #d7d7d7;
@@ -101,7 +54,6 @@
         display: flex;
         align-items: center;
         line-height: 3rem;
-        /*width: 100%;*/
     }
 
     .nav-item ::deep a.active {
@@ -114,16 +66,48 @@
         color: white;
     }
 
+.navbar-brand {
+    font-size: 1.6rem;
+}
+
+.navbar-toggler {
+    appearance: none;
+    cursor: pointer;
+    width: 3.5rem;
+    height: 2.5rem;
+    color: white;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
+}
+
+    .navbar-toggler:checked {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+
+    .navbar-toggler:checked ~ .nav-scrollable {
+        display: flex;
+        /*justify-content: center;*/
+        justify-content: space-between;
+     }
+
 .nav-scrollable {
     display: none;
 }
 
-.navbar-toggler:checked ~ .nav-scrollable {
-    display: flex;
-    /*justify-content: center;*/
-    justify-content: space-between;
+@media (min-width: 768px) {
+    .nav-item {
+        font-size: 1.2rem;
+    }
 }
 
+@media (min-width: 992px) {
+    .nav-item {
+        font-size: 1.3rem;
+    }
+}
 
 @media (min-width: 576px) {
     .navbar-toggler {
@@ -135,11 +119,7 @@
         display: block;
         /*justify-content: center;*/
         /* Allow sidebar to scroll for tall menus */
-        /*height: calc(100vh - 3.5rem);*/
-        /*overflow-y: auto;*/
-    }
-
-    .nav-item {
-        /*display: inline-block;*/
+        /*height: calc(100vh - 3.5rem);
+        overflow-y: auto;*/
     }
 }
